feat(index): T-02-02 Thread 21 - selective LLM re-ranking integration (feature-flagged)
Thread-21: Selective LLM Integration (Production-Ready)
Session: 05, Thread 21
Duration: ~3.5h autonomous execution
Status: ✅ PHASE 1 COMPLETE (Modules, Integration, Tests)

## Summary

Implements **selective LLM re-ranking** as a **feature-flagged, optional enhancement**
to address the 34% RANKING_ISSUE queries identified in Thread-18. Unlike universal
application (which would add ~17s per query), this implementation:

- **Applies LLM ONLY to 15-25% of queries** (SEVERE entity queries)
- **Expected Impact**: +2-3% global overlap (conservative)
- **Cost**: $20-40/month (vs $60-90/month universal)
- **Latency**: +2-3s average (vs +17s universal)
- **Feature Flag**: OFF by default (opt-in via `--features llm-reranking`)

**Decision Rationale**: Thread-20 batch validation showed 42.86% effective rate
(3/7 queries improved), with 75% win rate on SEVERE entity queries but 0% on
MODERATE/MILD concept queries. Selective application maximizes ROI while minimizing
overhead.

## Architecture

### Three-Module Design

1. **classifier.rs** (213 lines): Query classification logic with 4 unit tests
   - Entity keyword detection ("parameter", "docstring", "logic", etc.)
   - Severity heuristics (BM25 confidence, score gap, baseline estimation)
   - 4 criteria ALL must pass: entity keywords + low confidence + flat distribution + SEVERE case

2. **llm_reranker.rs** (293 lines): Rust subprocess bridge to Claude CLI
   - JSON serialization via stdin/stdout
   - Timeout protection (10s hard limit, configurable)
   - Graceful fallback on error/timeout → return BM25 results
   - Script not found → no crashes, just fallback

3. **sparse_index.rs** (+81/-11 lines): Unified search API with optional LLM
   - Updated from_graph() constructor (initialize classifier + llm_reranker)
   - Added Phase 4 optional LLM logic in search() method
   - 2 new integration tests (classifier initialization, feature-flag v

--- a/crates/cds-index/Cargo.toml
+++ b/crates/cds-index/Cargo.toml
@@ -9,6 +9,14 @@ license = "MIT OR Apache-2.0"
 name = "cds-index-service"
 path = "src/bin/cds-index-service.rs"
 
+[features]
+# Thread-21: Selective LLM Re-Ranking Integration
+# Enable this feature to use LLM re-ranking for SEVERE entity queries (15-25% of queries)
+# Requires: scripts/llm_reranker.sh (Claude Code CLI headless mode)
+# Expected impact: +2-3% global overlap, $20-40/month cost
+# Default: OFF (opt-in only)
+llm-reranking = []
+
 [dependencies]
 # Workspace dependencies
 tokio = { workspace = true }
