checkpoint(worklog): T-02-02 Session 05 complete - ALL Phase 3 work captured
- 4 worklog artifacts (work-summary, commit-log, notes, codereview)
- 3 RAW logs (Threads 01-05, 06-15, 16-31)
- Updated metadata.yaml with all corrections
- Excluded large diagnostic files (111MB+) via .gitignore

Session 05: 25.7h, 32 threads, 3 days (2025-11-02 to 2025-11-04)
Phase 3 complete: BM25 integration, parity validation, graph analysis
Baseline validated: 69.37% overlap@10 (92.5% of 75% target)
Tests: 78/78 passing, zero clippy warnings

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ coverage/
 
 # Claude settings
 .claude/settings.local.json
+# Diagnostic artifacts from parity analysis (Session 05)
+.artifacts/spec-tasks-T-02-02-sparse-index/diag/
